<resources>
    <string name="app_name">Service all Time</string>

    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="forget_password">¿Olvidó su contraseña?</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="full_name">Nombre Completo</string>
    <string name="phone">Teléfono</string>
    <string name="email_sent">Correo enviado</string>
    <string name="auth_failed">Autenticación fallida</string>
    <string name="user_created">Usuario creado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    !-- resources => create service activity-->
    <string name="service_title">Título</string>
    <string name="service_description">Descripción</string>
    <string name="service_categories">Categorías</string>
    <string name="service_schedule_start">Inicio del tiempo</string>
    <string name="service_schedule_end">Fin del tiempo</string>
    <string name="register_service">Registrar Servico</string>
    <string name="create_service">Crear servicio</string>
    <string name="add_image">Agregar imagen</string>

    <string name="des_service_detail">datos referentes del servicio seleccionado</string>
    <string name="des_img_avatar">Imagen de perfil del usuario</string>
    <string name="username">Usuario</string>
    <string name="des_img_service">Imagen de referencia del servicio</string>
    <string name="service_rating">Valoración</string>
    <string name="service_date_publish">Fecha de publicación</string>

    <string name="required">Requerido</string>

    <string name="title_fragment_inicio">Inicio</string>
    <string name="title_fragment_services">Servicios</string>
    <string name="title_fragment_profile">Perfil</string>
    <string name="title_fragment_add_service">Agregar Servicio</string>

    <string name="user_profession">Profesión</string>
    <string name="user_location">Localización</string>
    <string name="des_map_location">Icono o imagen de un mapa</string>
    <string name="des_shared_icon">Icono para compartir datos</string>
</resources>