<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/ScrollViewRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/Title_txtView_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Name_eTxt_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_persona"
                android:drawablePadding="5dp"
                android:ems="10"

                android:hint="@string/complete_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/Email_eTxt_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_persona"
                android:drawablePadding="5dp"
                android:ems="10"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/Phone_eTxt_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_persona"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="15dp" />

            <EditText
                android:id="@+id/Password_eTxt_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:ems="10"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/Register_Btn_R"
                style="@style/ButtonAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/Back2Login_Btn_R"
                style="@style/ButtonAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>